# napari-live-view

./: README.md  pyproject.toml
src/napari_live_view/: napari.yaml  receiver.py  viewer.py
